# cmake-for-all

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
